# coptai

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
coptai-cli/: Cargo.toml
coptai-cli/benches/: inference.rs
coptai-cli/src/: main.rs  progress.rs
coptai-core/: Cargo.toml
coptai-core/src/: error.rs  lib.rs  loader.rs  model.rs  progress.rs
coptai-core/src/loaders/: helpers.rs  loader.rs  mod.rs  quantize_loader.rs
coptai-core/src/quantization/: int8.rs  mod.rs
coptai-server/: Cargo.toml
coptai-server/src/: anthropic.rs  config.rs  lib.rs  main.rs  routes.rs  state.rs
