[package]
name = "coptai-core"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
safetensors = "0.4"
memmap2 = "0.9"
tokenizers = "0.19"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[features]
default = []                            # nothing enabled by default
cuda = ["candle-core/cuda"]             # Linux + NVIDIA only
metal = ["candle-core/metal"]           # Apple Silicon only
